iframe img video audio

--- a/list_type.html
+++ b/list_type.html
@@ -37,11 +37,48 @@
 
 
     <ul type="square">
-        <li>Devendra Fadanvis</li>
-        <li>Ajit Dada</li>
-        <li>Eknath Shinde</li>
-        <li>Nitin gadkari</li>
-        <li>Murlidhar Mohol</li>
+        <li>White</li>
+        <li>Yellow</li>
+        <li>Black</li>
+        <li>Pink</li>
+        <li>Red</li>
     </ul>
+
+    <!-- Defination List -->
+
+    <dl>
+        <dt>HTML</dt>
+        <dd>Html stands for Hyper Text Markup Language to Create web page structure</dd>
+
+        <dt>CSS</dt>
+        <dd>Css stands for Cascading Style Sheet to design you web page attractive</dd>
+    </dl>
+
+
+    <!-- Nested List -->
+
+    <h1>Nested List</h1>
+
+    <ol>
+        <li>Chennai Super Kings</li>
+    
+    <ul>
+       <li>Ms Dhoni</li> 
+       <li>Ruturaj Gaikwad</li>
+        <li>Ravindra Jadeja</li>
+        <li>Samarth Deshmukh</li>
+    </ul>
+
+    <li>KKR</li>
+    <ul>
+        <li>Ajinkya rahane</li>
+        <li>Andre Rasel</li>
+        <li>Harshit Rana</li>
+        <li>Nitish rana</li>
+    </ul>
+    <ol>
+
+
+
 </body>
 </html>
