marquee / header and footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
         <title>Index Page</title>
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="index.html">Home</a> |
+                <a href="about.html">About</a> |
+                <a href="services.html">services</a> |
+                <a href="product.html">Products</a> |
+                <a href="contact.html">Contacts</a> |
+            </nav>
+        </header>
+
+        &lt;Samarth&gt; 
         <!--Heading Tags Start-->
 
         <h1>Hello Welcome to FCT</h1>
