--- a/input_types.html
+++ b/input_types.html
@@ -35,6 +35,42 @@
 
             <label>Time</label>
             <input type="datetime-local" /> <br><br> 
+
+            <label>Choose City</label> <br>
+            <input type="checkbox"/> Mumbai 
+            <input type="checkbox"/> Pune
+            <input type="checkbox"/> Nagpur
+            <input type="checkbox"/> Pimpri
+            <br>
+
+            <label>Select Gender</label>
+            <input type="radio" name="Gender"/> Male
+            <input type="radio" name="Gender"/> Female
+            <input type="radio" name="Gender"/> Other 
+            <br>
+
+            <label>Select Fav Sweet Dish</label><br>
+            <select>
+                <option>Choose...</option>
+                <option>Ladu</option>
+                <option>Rasgulla</option>
+                <option>Gulabjam</option>
+                <option>Barfi</option>
+            </select>
+
+            <label>Upload Image</label><br>
+            <input type="file" multiple/> 
+
+            <label>Choose color</label><br>
+            <input type="color"/> 
+
+            <label>Choose Range</label><br>
+            <input type="range"/>
+
+            <textarea rows="5" cols="20"></textarea> <br>
+            <input type="submit"/>
+
+        
         </form>
     </fieldset>
 </body>
